department logo scale

--- a/department.html
+++ b/department.html
@@ -69,6 +69,7 @@
                     <div class="red1">
                         <div class="red1_front">
                             <img src="img/department/red.png" alt="">
+                            <img id="p1" src="img/department/p1.png" alt="">
                         </div>
                         <div class="red1_back">
                             <img src="img/department/redback.png" alt="">
@@ -83,6 +84,7 @@
                     <div class="green2">
                         <div class="green2_front">
                             <img src="img/department/green.png" alt="">
+                            <img id="p1" src="img/department/p2.png" alt="">
                         </div>
                         <div class="green2_back">
                             <img src="img/department/greenback.png" alt="">
@@ -97,6 +99,7 @@
                     <div class="blue3">
                         <div class="blue3_front">
                             <img src="img/department/blue.png" alt="">
+                            <img id="p1" src="img/department/p3.png" alt="">
                         </div>
                         <div class="blue3_back">
                             <img src="img/department/blueback.png" alt="">
@@ -111,6 +114,7 @@
                     <div class="yellow4">
                         <div class="yellow4_front">
                             <img src="img/department/yellow.png" alt="">
+                            <img id="p1" src="img/department/p4.png" alt="">
                         </div>
                         <div class="yellow4_back">
                             <img src="img/department/yellowback.png" alt="">
