--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         <!--校園新聞-->
         <div class="main">
             <!-- 校園新聞:校史導覽 -->
-            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="250" data-aos-duration="800" class="main_left">
+            <div class="main_left" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="250" data-aos-duration="800" >
                 <h1>校史導覽</h1>
                 <p>藍貓巫師學院創立350年，作為正派的魔法學校代表，開校以來便傳下此語錄：＂邪惡就是邪惡，沒有大小中之分。罪惡的界限因人而異，變幻莫測。如果要我從兩種罪惡中選其一，我寧可不做選擇。</p>
                 <img src="img/about/train.png" alt="">
