--- a/department.html
+++ b/department.html
@@ -68,7 +68,7 @@
                     <!-- 紅色卡片1 -->
                     <div class="red1">
                         <div class="red1_front">
-                            <img src="img/department/red.png" alt="">
+                            <img src="img/department/red1.png" alt="">
                             <img id="p1" src="img/department/p1.png" alt="">
                         </div>
                         <div class="red1_back">
@@ -83,7 +83,7 @@
                     <!-- 綠色卡片2 -->
                     <div class="green2">
                         <div class="green2_front">
-                            <img src="img/department/green.png" alt="">
+                            <img src="img/department/green1.png" alt="">
                             <img id="p1" src="img/department/p2.png" alt="">
                         </div>
                         <div class="green2_back">
@@ -98,7 +98,7 @@
                     <!-- 藍色卡片3 -->
                     <div class="blue3">
                         <div class="blue3_front">
-                            <img src="img/department/blue.png" alt="">
+                            <img src="img/department/blue1.png" alt="">
                             <img id="p1" src="img/department/p3.png" alt="">
                         </div>
                         <div class="blue3_back">
@@ -113,7 +113,7 @@
                     <!-- 黃色卡片4 -->
                     <div class="yellow4">
                         <div class="yellow4_front">
-                            <img src="img/department/yellow.png" alt="">
+                            <img src="img/department/yellow1.png" alt="">
                             <img id="p1" src="img/department/p4.png" alt="">
                         </div>
                         <div class="yellow4_back">
